Fixed formatting issues on mobile

--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  overflow-x: hidden;
 }
 
 .header {
@@ -63,16 +64,26 @@
 }
 
 .infos_shape {
-  position: absolute;
-  top: 950px;
-  width: 1000px;
+  position: relative;
+  left: -550px;
+  top: -875px;
   z-index: -100;
 }
 
-.infos_shape_2 {
+.infos_shape .svg {
   position: absolute;
-  width: 1000px;
+  width: 1100px;
+  height: 1100px;
+}
+
+.infos_shape_2 {
+  position: relative;
+  top: -500px;
   z-index: -100;
+}
+
+.infos_shape_2 .svg_2 {
+  width: 1000px;
 }
 
 .pill_container {
@@ -94,7 +105,6 @@
   margin-left: 20px;
   margin-right: 20px;
   filter: drop-shadow(0px 5px 4px #361a0c);
-
 }
 
 .pill .header {
@@ -163,11 +173,19 @@
     width: 500px;
   }
 
+  .bugcat_details img {
+    right: 20px;
+    width: 500px;
+  }
+
   .infos_shape {
-    position: absolute;
-    top: 750px;
+    left: -400px;
+    top: -500px;
+  }
+
+  .infos_shape .svg {
     width: 800px;
-    z-index: -100;
+    height: 800px;
   }
 
   .pill_container {
